# projects

./: readme.md
2048/: 2048.py  README.md
6.824/src/kvraft/: client.go  common.go  server.go  test.sh
6.824/src/mr/: master.go  rpc.go  worker.go
6.824/src/raft/: log.go  raft.go  test.sh  util.go
ConsistentHashRing/: ConsistentHashRing.py
DBSCAN/: README.md  dbscan.py
KMEANS/: README.md  kmeans.py
MinimumEditDistance/: med.py
PIPELINECPU/: IP_RAM.v  IP_ROM.v  README.md  add.v  addsub32.v  alu.v  cla32.v  cla_16.v  cla_2.v  cla_32.v  cla_4.v  cla_8.v  dff32.v  g_p.v  mul_signed.v  mux2x32.v  mux2x5.v  mux4x32.v  mux6x32.v  pipedereg.v  pipeemreg.v  pipeexe.v  pipeid.v  pipeidcu.v  pipeif.v  pipeir.v  pipelinedcpu.v  pipelinedcpu_tb.v  pipemwreg.v  pipepc.v  regfile.v  shift.v
dict/: README.md  _dict.py  dict  dictconf.py  install.sh  note
dlevel/dlevel/: CMakeLists.txt  client.cpp  dlevel.proto  printdb.cpp  run_client.sh  run_server.sh  server.cpp  stop.sh  test
dlevel/doc/: levelDB副本集的初步实现.md
dlevel/include/: readme.md
dlevel/lib/: readme.md
filters/: README.md
filters/bitmap/: Makefile  bitmap.c  bitmap.h  example.c
filters/bloomfilter/: Makefile  bloomfilter.c  bloomfilter.h  example.c
filters/cuckoofilter/: Makefile  cuckoofilter.c  cuckoofilter.h  example.c
filters/murmur3/: makefile
fs/: README.md  main.c  memprint.h  my_ext2.h
logserver/: Makefile  README.md
logserver/src/: Makefile  ae.c  ae.h  ae_epoll.c  anet.c  config.c  config.h  daemon.c  daemon.h  db.c  db.h  redis.conf  server.c  server.h  serverlog.c  serverlog.h  test.py  woker.c  woker.h
ls/: README.md  ls.c
note/: byyl.md  mks.md  os.md
note/computer_architecture/: computer_architecture.md
os/: README.md  main.c  process.h  test
pwd/: README.md  pwd.c
rsyncui/: README.md  rsyncui.py
translation/shared_libraries_and_dynamic_loading/: shared_libraries_and_dynamic_loading.md
